WP-8617 Fixing banner title alignment

--- a/sass/partials/design/_banner.sass
+++ b/sass/partials/design/_banner.sass
@@ -72,14 +72,14 @@
     line-height: 0
     padding: 0 15px
     position: relative
-    top: -25px
+    top: 20px
   +breakpoint($bp-mobile-max)
     display: table-cell
     height: 42px
     line-height: 1
     vertical-align: middle
     width: 98%
-    top: -44px
+    top: 0
   +breakpoint(420px max-width)
     max-width: 210px
     line-height: 1
